plonetheme/onegovbear/theme/scss/navigation.scss
$portlet-navigation-bg-color: $color-content-background !default;
$portlet-navigation-hover-color: lighten($color-gray-dark, 97.5%) !default;
$portlet-navigation-active-color: lighten($color-gray-dark, 95.5%) !default;

@include declare-variables(
  portlet-navigation-bg-color,
  portlet-navigation-hover-color,
  portlet-navigation-active-color);



@mixin navigationitem($color) {
  background-color: $color;
  border: 1px solid $color;
  @include borderradius();
}


.portlet.portletNavigationTree {
  @include dl(plain);

  border-top: 1px solid $color-gray-light;
  border-bottom: 1px solid $color-gray-light;
}


ul.navTree {
  @include ul(plain);
  li {
    margin-bottom: 0;
  }

  .navTreeItem {
    display: block;
  }

  a {
    padding: 0.4em 0;
    display: block;
    text-decoration: none;
    @include navigationitem($portlet-navigation-bg-color);
    &:hover {
      @include navigationitem($portlet-navigation-hover-color);
    }
  }

  a.navTreeCurrentItem, li.navTreeCurrentItem > a {
    font-weight: bold;
    color: $color-gray-dark;
    @include navigationitem($portlet-navigation-active-color);
  }

  @for $i from 1 through 10 {
    &.navTreeLevel#{$i} a {
      padding-left: $i + 1 * 1em;
    }
  }

  &.navTreeLevel0 > li > a{
    padding-left: 1em;
  }

  li.navTreeTopNode {
    border-bottom: 1px solid $color-gray-light;
    padding-left: 0;
  }

}

